Finished multigame support, added lang-specific announcer voices